deploy/homelab/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kfleet-demo
  namespace: kfleet-demo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kfleet.sullylab.de`)
      kind: Rule
      services:
        - name: kfleet-demo
          port: 80
